objects/DocumentChecklistItem.object
<CustomObject>
    <fields>
        <fullName>AW_DateVaulted__c</fullName>
        <description>This field will indicate the date the documents had been vaulted</description>
        <label>Date Vaulted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Vaulted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will indicated if the documents have been vaulted</description>
        <label>Vaulted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_Reason__c</fullName>
        <description>Placeholder to populate the reason for selecting a status on the document.</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_VaultedId__c</fullName>
        <description>This field contains the ID number of the Vault In which the document checklist item is stored</description>
        <label>Vaulted Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_UploadedWithCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to identify if the document was uplaoded with case</description>
        <label>Uploaded With Case</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_DocumentChecklistItems</fullName>
        <filterScope>Everything</filterScope>
        <label>All Document Checklist Items</label>
    </listViews>
    <recordTypes>
        <fullName>AW_EnvelopeSigningRequest</fullName>
        <active>true</active>
        <description>This record type will be used when a new Document Checklist Item will be created for an Envelope</description>
        <label>Envelope Signing Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>SC_CaseDocument</fullName>
        <active>true</active>
        <description>Represents Documents received and/or required for a Case with a particular Service Type</description>
        <label>Case Document</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SC_Reason_Mandatory_IfRejected</fullName>
        <active>true</active>
        <description>Reason must be provided if an item is set to Rejected, or the item has been Rejected and Reason has been set to blank.</description>
        <errorConditionFormula>AND
(
    RecordType.DeveloperName = &apos;SC_CaseDocument&apos;,
    TEXT(Status) = &apos;Rejected&apos;,
    ISBLANK(CMN_Reason__c),
    OR
    (
        ISCHANGED(CMN_Reason__c),
        ISCHANGED(Status)
    )
)</errorConditionFormula>
        <errorDisplayField>CMN_Reason__c</errorDisplayField>
        <errorMessage>Please select a reason for rejecting the document.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SC_Reason_ReadOnly_IfNotRejected</fullName>
        <active>true</active>
        <description>The Reason field may only be used for items that have been rejected and should be blank if status is updated from Rejected to any other value.</description>
        <errorConditionFormula>AND
(
    RecordType.DeveloperName = &apos;SC_CaseDocument&apos;,
    NOT(ISNEW()),
    ISCHANGED(CMN_Reason__c),
    NOT(TEXT(Status) = &apos;Rejected&apos;),
    NOT(TEXT(PRIORVALUE(Status)) = &apos;Rejected&apos;)
)</errorConditionFormula>
        <errorDisplayField>CMN_Reason__c</errorDisplayField>
        <errorMessage>Reason may only be edited for Rejected Items</errorMessage>
    </validationRules>
</CustomObject>